from __future__ import annotations

from sqlalchemy import String
from sqlalchemy.orm import Mapped, mapped_column

from app.db.base import Base
from app.db.mixin import BaseMixin


class Schedule(Base, BaseMixin):
    name: Mapped[str] = mapped_column(String(255), nullable=False)
